examples/parser/invalid/var_definition_void.xana
invalid_var :: void

def main() do end